[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universe-scanner"
version = "1.0.0"
description = "Real-time local network analyzer and visualizer CLI"
readme = "README.md"
authors = [{name = "desenyon"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["network", "scanner", "security", "monitoring", "visualization"]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
    "scapy>=2.5.0",
    "python-nmap>=0.7.1",
    "netifaces>=0.11.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "cryptography>=41.0.0",
    "paramiko>=2.11.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "humanize>=4.7.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=2.20.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
universe = "universe.cli:main"

[project.urls]
Homepage = "https://github.com/desenyon/universe"
Repository = "https://github.com/desenyon/universe"
Issues = "https://github.com/desenyon/universe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["universe*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
